feat: 인챈트 종류 수정